--- a/package.json
+++ b/package.json
@@ -4,35 +4,32 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --common-chunk false",
+    "build": "ng build --common-chunk false --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
-  "resolutions": {
-    "webpack": "^5.0.0"
-  },
   "dependencies": {
     "@angular-architects/module-federation": "^12.0.0",
     "@angular-architects/module-federation-tools": "0.0.2",
-    "@angular/animations": "12.0.0-rc.3",
-    "@angular/common": "12.0.0-rc.3",
-    "@angular/compiler": "12.0.0-rc.3",
-    "@angular/core": "12.0.0-rc.3",
-    "@angular/elements": "12.0.0-rc.3",
-    "@angular/forms": "12.0.0-rc.3",
-    "@angular/platform-browser": "12.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "12.0.0-rc.3",
-    "@angular/router": "12.0.0-rc.3",
+    "@angular/animations": "12.0.3",
+    "@angular/common": "12.0.3",
+    "@angular/compiler": "12.0.3",
+    "@angular/core": "12.0.3",
+    "@angular/elements": "12.0.3",
+    "@angular/forms": "12.0.3",
+    "@angular/platform-browser": "12.0.3",
+    "@angular/platform-browser-dynamic": "12.0.3",
+    "@angular/router": "12.0.3",
     "rxjs": "6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.0.0-rc.3",
-    "@angular/cli": "12.0.0-rc.3",
-    "@angular/compiler-cli": "12.0.0-rc.3",
+    "@angular-devkit/build-angular": "12.0.3",
+    "@angular/cli": "12.0.3",
+    "@angular/compiler-cli": "12.0.3",
     "@types/jasmine": "3.6.0",
     "@types/node": "^12.20.14",
     "codelyzer": "^6.0.0",
