--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/module-federation": "^12.0.0",
-    "@angular-architects/module-federation-tools": "0.0.2",
+    "@angular-architects/module-federation": "^14.2.0",
+    "@angular-architects/module-federation-runtime": "^14.2.0",
+    "@angular-architects/module-federation-tools": "^14.2.0",
     "@angular/animations": "12.0.3",
     "@angular/common": "12.0.3",
     "@angular/compiler": "12.0.3",
@@ -22,6 +23,7 @@
     "@angular/platform-browser": "12.0.3",
     "@angular/platform-browser-dynamic": "12.0.3",
     "@angular/router": "12.0.3",
+    "ngx-build-plus": "^12.2.0",
     "rxjs": "6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "0.10.2"
